--- a/web/src/app/sale/bill/bill.component.css
+++ b/web/src/app/sale/bill/bill.component.css
@@ -52,3 +52,16 @@ input::-webkit-inner-spin-button {
     font-size: 13px !important;
     padding: 2px !important;
 }
+
+.edit_icon {
+    background: #3f51b5;
+    color: #fff;
+    padding: 3px;
+    border-radius: 20px;
+    font-size: 17px;
+    height: 24px !important;
+    width: 24px !important;
+    cursor: pointer;
+    transition: 0.5s;
+    box-shadow: 2px 2px 6px #9c9795fa;
+}
