--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -721,9 +721,10 @@
                 <h3 class="header m-0">Existing Power (Product)</h3>
             </div>
             <div class="col-sm-6 ms-auto ">
-                <h3 class="m-0 text-right header" style="text-align: right;">Product Details : <span style="color:black"> {{this.PowerByRow[0].ProductTypeName}}/ {{this.PowerByRow[0].ProductName}} / {{this.PowerByRow[0].Optionsss}}</span></h3>
+                <h3 class="m-0 text-right header" style="text-align: right;">Product Details : <span style="color:black">
+                     {{this.ProductDetails}}</span></h3>
             </div>
-            <div class="col-sm-12 " style="overflow: auto; height: 120px;">
+            <div class="col-sm-12 " style="overflow: auto; height: 120px;" *ngIf="this.PowerByRow != ''" >
                 <div class="table-responsive ">
                     <table
                         class="table table-striped table-hover table-sm table-bordered"
@@ -919,7 +920,7 @@
 
         <div class="row m-0" *ngIf="this.customerPowerLists != ''">
             <div class="col-md-2">
-                <button type="button" class="me-3 ms-3" mat-raised-button color="primary"  >Update</button>
+                <button type="button" class="me-3 ms-3" mat-raised-button color="primary" (click)="updatePower()" >Update</button>
             </div>
         </div>
     </div>
