--- a/server/views/PurchasePDF.ejs
+++ b/server/views/PurchasePDF.ejs
@@ -5,11 +5,11 @@
     <section>
         <h2>Purchase Invoice</h2>
         <div class="main">
-            <!-- <div class="row1">
+            <div class="row1">
                 <div class="col-1">
                    <img src="<%=data.LogoURL%>" alt="" class="logo">
                 </div>
-            </div> -->
+            </div>
             <div class="row2">
                 <div class="col-1">
                     <p>Supplier Name</p>
