--- a/web/src/app/inventory/purchase-return-list/purchase-return-list.component.html
+++ b/web/src/app/inventory/purchase-return-list/purchase-return-list.component.html
@@ -86,7 +86,7 @@
                           <td>{{data.SupplierName}}</td>
                           <td>{{data.SystemCn}}</td>
                           <td>{{data.SupplierCn}}</td>
-                          <td>{{data.PurchaseDate}}</td>
+                          <td>{{data.CreatedOn}}</td>
                           <td>{{data.Quantity}}</td>
                           <td>{{data.DiscountAmount}}</td>
                           <td>{{data.SubTotal}}</td>
