--- a/web/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web/src/app/inventory/purchase-list/purchase-list.component.html
@@ -46,28 +46,28 @@
               </div>
 
               <!-- Purchase SupplierID Wise-->
-              <div *ngIf="this.id !== '0' && user.UserGroup === 'CompanyAdmin'" class="row">
+              <div *ngIf="this.id !== '0'  && user.UserGroup === 'CompanyAdmin'" class="row">
                 <div class="col-md-3 col-8 p-0 ms-3">
-                  <h2>Purchase For <span style="color:#232323;">{{this.dataList[0]?.SupplierName}} </span>
+                  <h2>Purchase For <span style="color:#232323;">{{this.dataList[0]?.SupplierName | titlecase }} </span>
                     <button class="bg-none" (click)="exportAsXLSX()">
                       <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"></i>
                     </button>
                   </h2>
                 </div>
-                <div class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0"  class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Total Amount : </span>
                   <span
-                    style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.TotalAmount.toFixed(2)}}</span>
+                    style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.TotalAmount}}</span>
                 </div>
-                <div class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Due Amount : </span>
                   <span
-                    style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.DueAmount.toFixed(2)}}</span>
+                    style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.DueAmount}}</span>
                 </div>
-                <div class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Paid Amount : </span>
                   <span
-                    style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.TotalAmount.toFixed(2)-CustomerTotal.DueAmount.toFixed(2)}}</span>
+                    style="color:#232323;font-size:15px;font-weight:bold;">{{(CustomerTotal.TotalAmount-CustomerTotal.DueAmount)}}</span>
                 </div>
                 <div class="col-md-2 col-4 ms-auto">
                   <div class="input-group">
@@ -83,11 +83,13 @@
               </div>
             </div>
             <!-- purchase list start -->
+            
             <div class="body mt-md-2 mt-5 p-2">
               <div class="row" *ngIf="gridview">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
-                  <table class="table table-striped table-hover table-sm table-bordered"
-                    style="border: 2px solid #fff !important;">
+                  <div *ngIf="this.dataList.length == 0" class="datanotFound" >Data Not Found</div>
+                  <table *ngIf="this.dataList.length != 0"  class="table table-striped table-hover table-sm table-bordered"
+                    style="border: 2px solid #fff !important; ">
                     <thead>
                       <tr>
                         <th style="text-align: left;">Action</th>
