--- a/web/src/app/sale/bill-list/bill-list.component.html
+++ b/web/src/app/sale/bill-list/bill-list.component.html
@@ -50,15 +50,15 @@
                   <h2>Bill List For <span style="color:#232323;">{{this.dataList[0]?.CustomerName}} </span> </h2>
                 </div>
 
-                <div class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Total Amount : </span>
                   <span style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.TotalAmount}}</span>
                 </div>
-                <div class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Due Amount : </span>
                   <span style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.DueAmount}}</span>
                 </div>
-                <div class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
+                <div *ngIf="this.dataList.length != 0" class="col-md-2 col-4 pt-2" style="border: 1px solid #b4b4b4; height: 38px;">
                   <span style="font-size:15px;font-weight:bold;">Paid Amount : </span>
                   <span
                     style="color:#232323;font-size:15px;font-weight:bold;">{{CustomerTotal.TotalAmount-CustomerTotal.DueAmount}}</span>
@@ -82,8 +82,9 @@
             <div class="body mt-2 p-2">
               <div class="row">
                 <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                  <div *ngIf="this.dataList.length == 0" class="datanotFound" >Data Not Found</div>
                   <div class="table-responsive">
-                    <table class="table table-striped table-hover table-sm table-bordered"
+                    <table *ngIf="this.dataList.length != 0" class="table table-striped table-hover table-sm table-bordered"
                       style="border: 2px solid #fff !important;">
                       <thead>
                         <tr>
