--- a/web/src/app/sale/billing/billing.component.html
+++ b/web/src/app/sale/billing/billing.component.html
@@ -164,6 +164,8 @@
                                             <div class="tab-pane fade show active p-1 pb-0" id="ex1-tabs-1"
                                                 role="tabpanel" aria-labelledby="ex1-tab-1"
                                                 style="border: 1px solid #0027ff">
+                                                
+                                                
                                                 <div class="row  powerRow">
                                                     <div class="col-md-1 col-3 m-0 p-0 ps-1">
                                                         <b class="extra m-0" style="padding: 2px; cursor: pointer;"
@@ -426,13 +428,12 @@
                                                         </mat-form-field>
                                                     </div>
                                                 </div>
-
+                                                
                                                 <!-- tbl list spec start -->
+                                                <div class="body">
                                                 <div class="row">
                                                     <div class="col-sm-12 " style="overflow: auto; height: 150px;">
-                                                        <div class="table-responsive ">
-                                                            <table
-                                                                class="table table-striped table-hover table-sm table-bordered"
+                                                            <table class="table table-striped table-hover table-sm table-bordered"
                                                                 style="border: 2px solid #fff !important; margin: 0;">
                                                                 <thead>
                                                                     <tr>
@@ -476,8 +477,7 @@
                                                                     </tr>
                                                                 </thead>
                                                                 <tbody>
-                                                                    <tr class="text-center"
-                                                                        *ngFor="let s of spectacleLists let i = index;"
+                                                                    <tr class="text-center" *ngFor="let s of spectacleLists let i = index;"
                                                                         style="white-space: nowrap;">
                                                                         <td style="width: 7%;">
                                                                             <mat-icon class="edits_icon ms-1"
@@ -526,9 +526,10 @@
                                                                     </tr>
                                                                 </tbody>
                                                             </table>
-                                                        </div>
+                                                        
                                                     </div>
                                                 </div>
+                                            </div>
                                                 <!-- tbl list spec end -->
 
                                             </div>
