--- a/server/views/TransferProduct.ejs
+++ b/server/views/TransferProduct.ejs
@@ -38,7 +38,7 @@
                 <thead>
                     <tr>
                         <th>S.No</th>
-                        <th>Item</th>
+                        <th style="width: 5%;">Item</th>
                         <th>Barcode</th>
                         <th>Quantity</th>
                         <th>From Shop</th>
@@ -54,7 +54,7 @@
                             <td>
                                 <%= index+1 %>
                             </td>
-                            <td>
+                            <td >
                                 <%=i.ProductName%>
                             </td>
                             <td>
