--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -931,7 +931,7 @@
 
 <!-- payment -->
   <ng-template #content1 role="document" let-modal>
-    <div class="modal-header" style="height: 50px;">
+    <div class="modal-header"  style="height: 50px; border-bottom: #ff651e 3px solid;">
       <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Payment</h3>
       <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
     </div>
