--- a/web/src/app/inventory/purchase-return/purchase-return.component.html
+++ b/web/src/app/inventory/purchase-return/purchase-return.component.html
@@ -152,22 +152,22 @@
                                 <div class="col-xl-3 col-lg-3 col-md-3 col-sm-3 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Product Name</mat-label>
-                                        <input matInput name="ProdName" [(ngModel)]="xferItem.ProductName" required
+                                        <input matInput style="color: rgb(255 0 0) !important;" name="ProdName" [(ngModel)]="xferItem.ProductName" required
                                             [disabled]=true>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Barcode</mat-label>
-                                        <input matInput name="ProdBarcode" [(ngModel)]="xferItem.Barcode" required
+                                        <input matInput style="color: rgb(255 0 0) !important;" name="ProdBarcode" [(ngModel)]="xferItem.Barcode" required
                                             [disabled]=true>
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1 col-lg-1 col-md-1 col-sm-1 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Available</mat-label>
-                                        <input matInput name="ProdBarcodecount" disabled
-                                            [(ngModel)]="xferItem.BarCodeCount">
+                                        <input matInput style="color: rgb(255 0 0) !important;" name="ProdBarcodecount" disabled
+                                            [(ngModel)]="item.BarCodeCount">
                                     </mat-form-field>
                                 </div>
                                 <div class="col-xl-1  col-lg-1 col-md-6 col-sm-12 mb-0">
