--- a/web/src/app/sale/customer-list/customer-list.component.html
+++ b/web/src/app/sale/customer-list/customer-list.component.html
@@ -89,6 +89,7 @@
                             <th class="text-left">Address</th>
                             <th class="text-left">CreatedBy</th>
                             <th class="text-left">UpdatedBy</th>
+                            <th class="text-left">ShopName</th>
                           </tr>
                         </thead>
                         <tbody>
@@ -114,6 +115,9 @@
                             <td class="text-left">{{data.Address}} </td>
                             <td class="text-left">{{data.CreatedPerson}} </td>
                             <td class="text-left">{{data.UpdatedPerson}} </td>
+                            <td class="text-left">{{data.ShopName}} 
+                              <span [style.color]="'blue'" *ngIf="data.AreaName !== null"> ({{data.AreaName}})</span> 
+                            </td>
                           </tr>
                         </tbody>
                       </table>
