--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -95,6 +95,7 @@
               <a href="javascript:void(0)" [routerLink]="['/inventory/search-barcode']" id="collapseExample">Search Barcode</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/fitterList']" id="collapseExample">Fitter</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/preOrderList']" id="collapseExample">Pre-Order</a>
+              <a href="javascript:void(0)" [routerLink]="['/inventory/dummyPreorderList']" id="collapseExample">Dummy List</a>
               <a href="javascript:void(0)" [routerLink]="['/inventory/purchase-returnList']" id="collapseExample">Purchase Return</a>
             </div>
           </div>
