--- a/web/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -83,7 +83,7 @@
                                                             <mat-icon *ngIf="data.UpdateProduct" class="edit_icon ms-1" >save
                                                             </mat-icon>
                                                         </button>
-                                                        <button class="bg-btn" (click)="deleteItem('Product',i)">
+                                                        <button class="bg-btn" (click)="deleteItem('Product',i,data)">
                                                             <mat-icon class="delete_icon ms-1" >delete_forever</mat-icon>
                                                         </button>
                                                     </td>
