--- a/web/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
+++ b/web/src/app/inventory/perorder-dummy-list/perorder-dummy-list.component.html
@@ -91,7 +91,7 @@
                                                     <td [ngClass]="{'my_class': data.RetailPrice === data.UnitPrice}" class="text-left">{{data.ProductName}}</td>
                                                     <td>{{data.ProductTypeName}}</td>
                                                     <td>{{data.Quantity}}</td>
-                                                    <td>{{data.BarCode}}</td>
+                                                    <td>{{data.BaseBarCode}}</td>
                                                     
 
                                                     <td *ngIf="!data.UpdateProduct" class="text-center" >
