--- a/web/src/app/inventory/supplier/supplier.component.html
+++ b/web/src/app/inventory/supplier/supplier.component.html
@@ -117,8 +117,7 @@
                                         <td class="text-center">{{(data.PhoneNo !== 'null')? data.PhoneNo: ''}}</td>
                                         <td class="text-center">{{(data.Email !== 'null')? data.Email: ''}}</td>
                                         <td class="text-center">{{data.Address}}</td>
-                                        <td class="text-center">{{(data.ContactPerson !== 'null')? data.ContactPerson:
-                                            ''}}</td>
+                                        <td class="text-center">{{(data.ContactPerson !== 'null')? data.ContactPerson:''}}</td>
                                         <td class="text-left"> {{data.CreatedPerson}} </td>
                                         <td class="text-left"> {{data.UpdatedPerson}} </td>
                                     </tr>
