--- a/web/src/app/inventory/purchase-list/purchase-list.component.html
+++ b/web/src/app/inventory/purchase-list/purchase-list.component.html
@@ -70,10 +70,10 @@
                     style="color:#232323;font-size:15px;font-weight:bold;">{{this.CustomerTotal}}</span>
                 </div>
                 <div class="col-md-2 col-4 ms-auto">
-                  <div class="input-group">
+                  <!-- <div class="input-group">
                     <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search" id="form1"
                       class="form-control" />
-                  </div>
+                  </div> -->
                 </div>
                 <div class="col-md-1 col-1" style="width: 40px;padding: 0;">
                   <button class="bg-none" [routerLink]="['/inventory/purchase',0]">
