--- a/web/src/app/report/transfer-product-report/transfer-product-report.component.html
+++ b/web/src/app/report/transfer-product-report/transfer-product-report.component.html
@@ -47,7 +47,7 @@
                                          </ng-select> -->
 
                                          <ng-select [items]="billerList"  bindLabel="text"
-                                         bindValue="id"  [multiple]="true"   formControlName="billerIds" >
+                                         bindValue="id"  [multiple]="true" placeholder="Form Shop"  formControlName="billerIds" >
                                          <ng-template ng-header-tmp>
                              
                                            <div>
