--- a/web/src/app/sale/bill/bill.component.html
+++ b/web/src/app/sale/bill/bill.component.html
@@ -698,6 +698,8 @@
                      [disabled]="BillMaster.ID === null" (click)="update()">Update</button>
                      <button type="button" class=" me-3" mat-raised-button color="primary" 
                      [disabled]="BillMaster.ID === null" (click)="openModal1(content1)">Payment</button>
+                     <button type="button" class=" me-3" mat-raised-button color="primary" 
+                     [disabled]="BillMaster.ID === null" (click)="openModal12(content12)">Order</button>
                     <button type="button" mat-raised-button color="primary">Receipt</button>
                     <button type="button" class="me-3 ms-3" mat-raised-button color="primary">Receipt +
                         Power</button>
@@ -990,3 +992,84 @@
          </div>
     </div>
   </ng-template>
+
+<!-- supplier order -->
+  <ng-template #content12 role="document" let-modal>
+    <div class="modal-header"  style="height: 50px; border-bottom: #ff651e 3px solid;">
+      <h3 class="modal-title header pt-2" id="exampleModalLabel" style="font-weight: bolder;">Supplier PreOrder</h3>
+      <button type="button" class="btn-close" aria-hidden="true" (click)="modal.dismiss('Cross click')"></button>
+    </div>
+    <div class="modal-body">
+        <div class="row mt-2">
+            <div class="col-md-3">
+                <mat-form-field class="example-full-width mb-0">
+                    <mat-label>Select Supplier</mat-label>
+                    <mat-select name="supplier" [(ngModel)]="data.SupplierID" [ngModelOptions]="{standalone: true}">
+                        <mat-option value="All">All</mat-option>
+                        <mat-option *ngFor="let s of supplierList  let i = index;" value="{{s.ID}}">
+                            {{s.Name}}
+                        </mat-option>
+                    </mat-select>
+                </mat-form-field>
+            </div>
+            <div class="col-md-4">
+                <button  class="ms-2" type="button" mat-raised-button color="primary" (click)="assignSupplierPo()">
+                    Assign
+                </button>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col-sm-12 ">
+              <div class="table-responsive">
+                <table class="table table-striped table-hover table-sm table-bordered"
+                  style="border: 2px solid #fff !important;">
+                  <thead class="thead-light text-center">
+                    <tr style="white-space: nowrap;">
+                        <th>
+                            <mat-checkbox class="example-margin" color="primary" (click)="multicheck()"></mat-checkbox>
+                        </th>
+                        <th>SNo</th>
+                        <th>MRD No</th>
+                        <th>CustomerName</th>
+                        <th>MobileNo</th>
+                        <th>InvoiceDate</th>
+                        <th>DeliveryDate</th>
+                        <th>InvoiceNo</th>
+                        <th>ProductName</th>
+                        <th>Qty</th>
+                        <th>SupplierName</th>
+                        <th>ShopName</th>
+                    </tr>
+                </thead>
+                  <tbody class="text-center">
+                    <tr *ngFor="let v of orderList; let i = index;">
+                        <td>
+                            <input type="checkbox" class="example-margin" id="{{v.ID}}"
+                            [(ngModel)]="v.checked" color="primary" [checked]="v.Sel" 
+                            (click)="validate(v, $event)" name="feature{{v.ID}}"
+                            value="{{v.Sel}}" style="width: 20px; height: 16px;">
+                        </td>
+                        <td>{{1+i}}</td>
+                        <td>{{v.MRDNo}}</td>
+                        <td>{{v.CustomerName}}</td>
+                        <td>{{v.MobileNo1}}</td>
+                        <td>{{v.InvoiceDate}}</td>
+                        <td>{{v.DeliveryDate }}</td>
+                        <td>{{v.InvoiceNo}}</td>
+                        <td>{{v.ProductName}}</td>
+                        <td>{{v.Quantity}}</td>
+                        <td>{{v.SupplierID === -1 ? v.ShopName : v.SupplierName}}</td>
+                        <td>{{v.ShopName}}<span [style.color]="'blue'"
+                             *ngIf="v.AreaName !== 'null'">({{v.AreaName}})</span>
+                        </td>
+                    </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
+          </div>
+    </div>
+  </ng-template>
+
+
+  
