--- a/web/src/app/sale/billing/billing.component.html
+++ b/web/src/app/sale/billing/billing.component.html
@@ -149,6 +149,10 @@
                                                 style="padding: 0px 22px">
                                                 Clear
                                             </button>
+                                            <button class="ms-2" (click)="customerPowerPDF()" mat-raised-button color="primary"
+                                                style="padding: 0px 22px">
+                                                PDF
+                                            </button>
                                         </div>
                                     </div>
                                 </div>
