--- a/web/src/app/common/common.component.html
+++ b/web/src/app/common/common.component.html
@@ -119,6 +119,7 @@
             <div class="drop-content" id="collapseExample">
               <!-- <a href="javascript:void(0)" [routerLink]="['/sale/billing',0,0]" id="collapseExample">Billing</a> -->
               <a href="javascript:void(0)" [routerLink]="['/po/supplierPo']" id="collapseExample">Supplier Po</a>
+              <a href="javascript:void(0)" [routerLink]="['/po/convertToPurchase']" id="collapseExample">Convert To Purchase</a>
             </div>
           </div>
           <!-- companyadmin end Bliing -->
